--- a/src/checkout.html
+++ b/src/checkout.html
@@ -2,7 +2,7 @@
 <html lang="zh-Hant">
 <head>
     @@include('./layout/head.html', {
-        "title" : "Sìkha 牧場"
+        "title" : "Sìkha 牧場 | 結帳流程"
     })
 </head>
 <body>
@@ -10,7 +10,10 @@
     <header>
         @@include('./layout/nav.html')
     </header>
+
     
+
+
     <!-- footer -->
     @@include('./layout/footer.html')
 </body>
