refactor: layout 中的 nav 改為 header

--- a/src/animal.html
+++ b/src/animal.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <!-- header -->
-    <header>
-        @@include('./layout/nav.html')
-    </header>
+    @@include('./layout/header.html')
 
     <!-- footer -->
     @@include('./layout/footer.html')
