--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <!-- header -->
-    <header>
-        @@include('./layout/nav.html')
-    </header>
+    @@include('./layout/header.html')
 
+    <main>
+        
+    </main>
     <!-- footer -->
     @@include('./layout/footer.html')
 </body>
