style: 修改typography.scss變數

--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    @@include('./layout/back_head.html', {
+    @@include('./layout/head.html', {
         "title" : "Sìkha 後台"
     })
 </head>
 <body>
-    <!-- header -->    
+    <!-- 側邊導覽列 -->  
+    
     @@include('./layout/back_nav.html')
-
+    
 
 </html>
