--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    @@include('./layout/back_head.html', {
+    @@include('./layout/head.html', {
         "title" : "Sìkha 後台"
     })
 </head>
