--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- 側邊導覽列 -->  
-    <div class="wrapper">
+    <!-- <div class="wrapper"> -->
     @@include('./layout/back_aside.html')
         <div class="main">
             <h4>會員資料管理</h4>
@@ -19,6 +19,6 @@
                 <li>地址</li>
             </ul>
         </div>
-    </div>
+    <!-- </div> -->
 </body>
 </html>
