feat: 修改會員管理頁面,後台導覽列, 新增活動照&素材圖片 style: 修改後台樣式, 新增mixin內的space ---> margin

--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -7,10 +7,16 @@
 </head>
 <body>
     <!-- 側邊導覽列 -->  
-    <!-- <div class="wrapper"> -->
     @@include('./layout/back_aside.html')
-        <div class="main">
+
+    
+        <article class="article">
             <h4>會員資料管理</h4>
+            <div class="search">
+                <label for="" class="memberId">會員編號查詢</label>
+                <input type="text" class="mbId_text">
+                <img src="" alt="">
+            </div>
             <ul class="titleBar">
                 <li>會員編號</li>
                 <li>姓名</li>
@@ -18,7 +24,9 @@
                 <li>聯絡電話</li>
                 <li>地址</li>
             </ul>
-        </div>
-    <!-- </div> -->
+            <!-- <input type="button" value="abc" class="test"> -->
+        </article>
+
+        
 </body>
 </html>
