--- a/src/back_login.html
+++ b/src/back_login.html
@@ -19,7 +19,7 @@
 <input type="text" value="" placeholder="請輸入帳號" id="username">
 </div>   
 <div class ="group"> 
-<label for="username">密碼：</label>
+<label for="password">密碼：</label>
 <input type="password" value="" placeholder="請輸入密碼" id="password">
 </div>
 <button type="submit" class="bl_btn">登入</button>
