--- a/src/back_login.html
+++ b/src/back_login.html
@@ -5,9 +5,11 @@
         "title" : "Sìkha 後台登入頁"
     })
 </head>
-<body>
-    <div class="bl_bg">
-    <div class="bl_wrapper">
+
+<body class="bl_bg">
+    <div class="b_bg">
+    <!-- <div class="b_bg"></div> -->
+    <div class="bl_out">
         <div class="bl_logo"></div>
    <img class="logo" src="./img/logo_16B1AA.svg" alt="logo">
 
@@ -27,5 +29,9 @@
     </form>
 
 </div>
+
 </div>
+<!-- <p class="b_p">本網站為緯育TibaMe前端設計工程師班第72期第二組學員專題成果作品，<br>本平台僅供學習、展示之用。參考資源：六甲山牧場、清境農場。</p> -->
+
 </body>
+</html>
