--- a/src/animal.html
+++ b/src/animal.html
@@ -96,7 +96,7 @@
                      sheep(){
                         if( $(window).innerWidth() >= 575.98 ){
                             $("html, body").animate({
-                             scrollTop: $("#s_0").offset().top
+                             scrollTop: $("#s_0").offset().top -70
                             });
                          }else{
 
@@ -106,7 +106,7 @@
                      cow(){
                         if( $(window).innerWidth() >= 575.98 ){
                             $("html, body").animate({
-                             scrollTop: $("#s_1").offset().top
+                             scrollTop: $("#s_1").offset().top -70
                             });
                          }else{
 
@@ -116,7 +116,7 @@
                      alpaca(){
                         if( $(window).innerWidth() >= 575.98 ){
                             $("html, body").animate({
-                             scrollTop: $("#s_2").offset().top
+                             scrollTop: $("#s_2").offset().top -70
                             });
                          }else{
 
@@ -126,7 +126,7 @@
                      horse(){
                         if( $(window).innerWidth() >= 575.98 ){
                             $("html, body").animate({
-                             scrollTop: $("#s_3").offset().top
+                             scrollTop: $("#s_3").offset().top-70
                             });
                          }else{
 
@@ -136,7 +136,7 @@
                      pig(){
                         if( $(window).innerWidth() >= 575.98 ){
                             $("html, body").animate({
-                             scrollTop: $("#s_4").offset().top
+                             scrollTop: $("#s_4").offset().top-70
                             });
                          }else{
 
@@ -146,7 +146,7 @@
                      deer(){
                         if( $(window).innerWidth() >= 575.98 ){
                             $("html, body").animate({
-                             scrollTop: $("#s_5").offset().top
+                             scrollTop: $("#s_5").offset().top -70
                             });
                          }else{
 
