feat: 商品內頁原始碼、scss

--- a/src/product_detail.html
+++ b/src/product_detail.html
@@ -19,11 +19,13 @@
             <p class="pd_bread">首頁 | 周邊產品 | 草莓牛奶(六入組)</p>
             <div class="row pd_area">
                 <div class="col-6 col-md-12">
+                    <div class="pd_topPic"><img src="./img/porducts/papaya.jpg" alt="" style="width:590px"></div>
+
                     <ul class="pd_pic">
                         <li> <img src="./img/porducts/papaya.jpg" alt=""></li>
                         <li> <img src="./img/porducts/papaya.jpg" alt=""></li>
                         <li> <img src="./img/porducts/papaya.jpg" alt=""></li>
-                        <li> <img src="./img/porducts/papaya.jpg" alt=""></li>
+
                     </ul>
 
 
@@ -40,13 +42,14 @@
 
                                     <div id="pd_stockCount">
                                         <button class="pd_stockCount_btn">－</button><input type="text"
-                                            id="pd_stockCount_input" value="1" name="add_prd_count"><button class="pd_stockCount_btn">＋</button>
+                                            id="pd_stockCount_input" value="1" name="add_prd_count"><button
+                                            class="pd_stockCount_btn">＋</button>
                                     </div>
                                     <h5>在庫數量：<span id="pd_inStock">999</span></h5>
                                 </div>
                                 <div class="pd_info_btn">
-                                    <button type="button" id="pd_info_cart">放入購物車</button>
-                                    <button type="button" id="pd_info_buy">直接購買</button>
+                                    <a href="#"><button type="button" id="pd_info_cart">放入購物車</button></a>
+                                    <a href="#"><button type="button" id="pd_info_buy">直接購買</button></a>
                                 </div>
                     </div>
 
@@ -79,24 +82,30 @@
             <div class="pd_recommend">
                 <h3>推薦商品</h3>
                 <ul class="pd_recommend_list">
-                    <li><img src="./img/porducts/papaya.jpg" alt="" style="max-width: 150px;">
-                        <div class="pd_recommend_text">
-                            <p class="pd_recommend_name">咖啡牛奶</p>
-                            <p class="pd_recommend_price">299</p>
-                        </div>
-                    </li>
-                    <li><img src="./img/porducts/papaya.jpg" alt="" style="max-width: 150px;">
-                        <div class="pd_recommend_text">
-                            <p class="pd_recommend_name">咖啡牛奶</p>
-                            <p class="pd_recommend_price">299</p>
-                        </div>
-                    </li>
-                    <li><img src="./img/porducts/papaya.jpg" alt="" style="max-width: 150px;">
-                        <div class="pd_recommend_text">
-                            <p class="pd_recommend_name">咖啡牛奶</p>
-                            <p class="pd_recommend_price">299</p>
-                        </div>
-                    </li>
+                    <a href="#">
+                        <li><img src="./img/porducts/papaya.jpg" alt="">
+                            <div class="pd_recommend_text">
+                                <p class="pd_recommend_name">咖啡牛奶</p>
+                                <p class="pd_recommend_price">299</p>
+                            </div>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li><img src="./img/porducts/papaya.jpg" alt="">
+                            <div class="pd_recommend_text">
+                                <p class="pd_recommend_name">咖啡牛奶</p>
+                                <p class="pd_recommend_price">299</p>
+                            </div>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li><img src="./img/porducts/papaya.jpg" alt="">
+                            <div class="pd_recommend_text">
+                                <p class="pd_recommend_name">咖啡牛奶</p>
+                                <p class="pd_recommend_price">299</p>
+                            </div>
+                        </li>
+                    </a>
                 </ul>
             </div>
 
