feat:更新checkout.html頁面

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -9,7 +9,13 @@
     <!-- header -->
     @@include('./layout/header.html')
 
-    
+    <div class="container">
+        <ul class="progress">
+          <li class="active">1</li>
+          <li>2</li>
+          <li>3</li>
+        </ul>
+      </div>
 
 
     <!-- footer -->
