--- a/src/checkout.html
+++ b/src/checkout.html
@@ -8,15 +8,15 @@
 <body>
     <!-- header -->
     @@include('./layout/header.html')
-
-    <div class="container">
-        <ul class="progress">
-          <li class="active">1</li>
-          <li>2</li>
-          <li>3</li>
-        </ul>
+    <article class="checkout_article">
+      <div class="container">
+          <ul class="step">
+            <li class="active">1</li>
+            <li>2</li>
+            <li>3</li>
+          </ul>
       </div>
-
+    </article>
 
     <!-- footer -->
     @@include('./layout/footer.html')
