feat:新增member_mg.js , 新增checkout內容

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -11,12 +11,14 @@
     <article class="checkout_article">
       <div class="container">
           <ul class="step">
-            <li class="active">1</li>
-            <li>2</li>
-            <li>3</li>
+            <li class="active">訂單資料</li>
+            <li>付款資訊</li>
+            <li>訂單確認</li>
           </ul>
       </div>
+      
     </article>
+    <div style="height:1000px"></div>
 
     <!-- footer -->
     @@include('./layout/footer.html')
