feat: 修改 checkbox 的 size

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -79,7 +79,7 @@
         <li class="addressout">
           <label for="address" class="sendIn">送貨地址</label>
           <input type="text" id="address" class="sendAddress">
-          <input type="checkbox" name="" id="same" class="checkSame"><label for="same">同會員資料</label>
+          <input type="checkbox" name="" id="same" class="checkSame"><label for="same" class="Same">同會員資料</label>
         </li>
         
       </ul>
