--- a/src/member_mg.html
+++ b/src/member_mg.html
@@ -36,7 +36,7 @@
                     <p>{{customer.address}}</p>
                 </li>  
             </ul>
-            <div class="mb_mgPage">
+            <div class="mb_mgPage container-lg">
                 <a href="" id="left" class="pages">←</a>
                 <a href="" class="active">1</a>
                 <a href="">2</a>
