feat: checkout頁面切板完成(待寫js.jquery)

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -111,7 +111,7 @@
 						<p>付款方式</p>
 						<select name="" id="" class="paySelect">
 						<option value="" class="payOption">信用卡</option>
-						<option value="" class="payOption">貨到付款</option>
+						<option value="" class="payOption arrival">貨到付款</option>
 						</select>
 					</div>
 				</li>
@@ -145,9 +145,11 @@
 			
 			<input type="submit" value="提交訂單" class="paysub">
 		</div>
-		<!---------- 結帳流程二 ---------->
+		<!---------- 結帳流程三 ---------->
 		<div class="stepC container-lg">
-			
+			<h3>訂單已完成，您的訂單編號為#20220311</h3>
+			<h5>您可以前往(<a href="" class="myMB">我的會員</a>)查詢訂單狀態</h5>
+			<button class="gogo">繼續購物</button>
 		</div>
 
 		<!-- footer -->
