chore: 上線流程錯誤修正

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
     <!-- footer -->
     @@include('./layout/footer.html')
 
-    <script src="js/index.min.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
