feat : 修改 member_mg.js

--- a/src/checkout.html
+++ b/src/checkout.html
@@ -155,6 +155,6 @@
 		<!-- footer -->
 		@@include('./layout/footer.html')
 
-		<script src="./js/checkout.min.js"></script>
+		<script src="./js/checkout.js"></script>
 	</body>
 </html>
